# spotify-assistant

./: .gitignore  Cargo.toml  README.md
.github/: update-version-on-push.yml
.github/workflows/: update-version-on-push.yml
spotify-assistant/: Cargo.toml
spotify-assistant-ai/: Cargo.toml
spotify-assistant-cli/: Cargo.toml
spotify-assistant-cli/src/: cli.rs  enums.rs  interface.rs  lib.rs  macros.rs
spotify-assistant-cli/src/commands/: followed_artists.rs  mod.rs
spotify-assistant-cli/src/ui/: fuzzy.rs
spotify-assistant-core/: Cargo.toml
spotify-assistant-core/src/: lib.rs
spotify-assistant-core/src/actions/: general.rs  liked_songs.rs  mod.rs  playlist.rs  playlist_editor.rs  recently_played.rs  update.rs  user.rs
spotify-assistant-core/src/actions/exploration/: album.rs  artist.rs  mod.rs  playlist.rs
spotify-assistant-core/src/actions/playlists/: compare.rs  mod.rs  query.rs  user.rs
spotify-assistant-core/src/enums/: duplication.rs  fs.rs  mod.rs  pl.rs  track_collection.rs  validation.rs
spotify-assistant-core/src/errors/: collections.rs  configuration.rs  mod.rs
spotify-assistant-core/src/extractors/: artist.rs
spotify-assistant-core/src/macros/: mod.rs
spotify-assistant-core/src/models/: blacklist.rs  configuration.rs  filtering.rs  full_track_fingerprint.rs  mod.rs
spotify-assistant-core/src/paginator/: event.rs  mod.rs  runner.rs  trait.rs
spotify-assistant-core/src/test_support/: mod.rs  offline.rs
spotify-assistant-core/src/traits/: apis.rs  file_readers.rs  mod.rs  track_info.rs  vector_manipulation.rs
spotify-assistant-core/src/utilities/: configurations.rs  datetime.rs  general.rs  logging.rs  mod.rs
spotify-assistant-core/src/utilities/filesystem/: constants.rs  files.rs  initialization.rs  mod.rs
spotify-assistant-data-request/: Cargo.toml
spotify-assistant-data-request/src/: lib.rs
spotify-assistant-data-request/src/functionality/: extended_history.rs  mod.rs
spotify-assistant-database/: Cargo.toml
spotify-assistant-database/src/mongo/: actions.rs  connection.rs  groups.rs  mod.rs  models.rs  traits.rs
spotify-assistant-database/src/sqlite/: connection.rs  mod.rs  querying.rs  statements.rs
spotify-assistant-tui/: Cargo.toml
spotify-assistant/src/: main.rs
src/core/: mod.rs
src/core/databases/: mod.rs  querying.rs  sqlite.rs
src/core/databases/mongo/: connection.rs  groups.rs  mod.rs
src/core/databases/sqlite/: connection.rs  mod.rs  statements.rs
src/core/enums/: db.rs  fs.rs  mod.rs  pl.rs  validation.rs
src/core/functionality/: exploration.rs  mod.rs  update.rs
src/core/functionality/exploration/: album.rs  artist.rs  mod.rs  playlist.rs
src/core/models/: mod.rs  traits.rs
src/core/queries/: mod.rs  user.rs
src/core/utilities/: configurations.rs  miscellaneous.rs  mod.rs
src/core/utilities/filesystem/: initialization.rs
src/core/utilities/recordkeeping/: tracks.rs
writerside/: spotify-assistant.tree  writerside.cfg
writerside/cfg/: buildprofiles.xml
writerside/topics/: changelog.md  home.md  installation.md  roadmap.md  tasks.md
