[workspace]
members = [
    "spotify-assistant-core",
    "spotify-assistant-database",
    "spotify-assistant",
    "spotify-assistant-cli",
    "spotify-assistant-tui",
    "spotify-assistant-ai",
    "spotify-assistant-data-request",
]
resolver = "3"

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.90.0"
authors = ["Jonathan Hill <jonathans-github@pm.me>"]
repository = "https://github.com/JonathanBHill/spotify-assistant"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "allow"

[workspace.lints.clippy]
all = "warn"
pedantic = "allow"
nursery = "allow"

# Centralized versions for the whole workspace.
[workspace.dependencies]
# shared
tracing = { version = "0.1.43", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "default", "local-time", "chrono"] }
tracing-appender = { version = "0.2.4" }
rspotify = { version = "0.15.3", default-features = false, features = ["async-stream", "cli", "client-reqwest", "reqwest-default-tls", "env-file"] }
dotenv = { version = "0.15.0" }
chrono = { version = "0.4.42" }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = { version = "1.0.100" }
futures = { version = "0.3.31" }
serde = { version = "1.0.228", features = ["derive"] }
pbr = { version = "1.1.1" }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
once_cell = { version = "1.21.3" }
tempfile = { version = "3.23.0" }
ansi_term = { version = "0.12.1" }
directories = { version = "6.0.0" }
regex = { version = "1.12.2" }
toml = { version = "0.9.8" }
term_size = { version = "1.0.0-beta1" }
unicode-normalization = { version = "0.1.25" }
serde_json = { version = "1.0.145" }
thiserror = { version = "2.0.17" }
keyring = { version = "4.0.0-alpha.3" }

# internal dependencies
spotify-assistant-core = { path = "spotify-assistant-core" }
spotify-assistant-data-request = { path = "spotify-assistant-data-request" }
spotify-assistant-database = { path = "spotify-assistant-database" }
spotify-assistant-cli = { path = "spotify-assistant-cli" }

[profile.dev]
debug = true
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[alias]
# Run all tests across every crate in the workspace
test-all = "test --workspace"
