[package]
name = "spotify-assistant-cli"
version = "0.1.0"
resolver = "2"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
clap_complete = { version = "4.5.38", default-features = true }
futures = "0.3.31"
spotify-assistant-core = { path = "../spotify-assistant-core" }
