[package]
name = "spotify-assistant-cli"
version = "0.1.0"
resolver = "2"
edition = "2021"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
clap_complete = "4.5.41"
futures = "0.3.30"
spotify-assistant-core = { version = "0.1.0", path = "../spotify-assistant-core" }
rspotify = "0.14.0"
tracing = "0.1.41"
