[package]
name = "spotify-assistant-cli"
version.workspace = true
edition.workspace = true
description = "Contains the spotify assistant utility's CLI logic"

[dependencies]
tracing.workspace = true
rspotify.workspace = true
anyhow.workspace = true
futures.workspace = true
dialoguer.workspace = true
spotify-assistant-core.workspace = true

clap = { version = "4.5.50", features = ["derive"] }
clap_complete = "4.5.59"
