[package]
name = "spotify-assistant-core"
version.workspace = true
edition = "2024"
description = "Contains the spotify assistant utility's core logic"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
rspotify.workspace = true
dotenv.workspace = true
chrono.workspace = true
tokio.workspace = true
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
pbr.workspace = true
dialoguer.workspace = true
ansi_term.workspace = true
directories.workspace = true
regex.workspace = true
toml.workspace = true
term_size.workspace = true
unicode-normalization.workspace = true
serde_json.workspace = true
thiserror.workspace = true
once_cell.workspace = true
tempfile.workspace = true
keyring.workspace = true
