[package]
name = "spotify-assistant-data-request"
version.workspace = true
edition.workspace = true
description = "Contains the spotify assistant utility's data analytics logic for handling user data that can be requested from Spotify"

[dependencies]
tracing.workspace = true
spotify-assistant-core.workspace = true

polars = { version = "0.51.0", features = ["lazy", "fmt", "temporal", "json", "polars-plan", "strings", "polars-io", "parquet", "cum_agg"] }
