[package]
name = "spotify-assistant-database"
version.workspace = true
edition.workspace = true
description = "Contains the spotify assistant utility's database logic"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
rspotify.workspace = true
dotenv.workspace = true
chrono.workspace = true
tokio.workspace = true
serde.workspace = true
spotify-assistant-core.workspace = true

rusqlite = { version = "0.37.0", optional = true, features = ["chrono"] }
tokio-postgres = { version = "0.7.15", optional = true }
mongodb = { version = "3.3.0", optional = true }
redis = { version = "1.0.0-rc.2", optional = true }

[features]
default = []
sqlite = ["rusqlite"]
postgres = ["tokio-postgres"]
mongo = ["mongodb"]
rds = ["redis"]
alldb = ["sqlite", "postgres", "mongo", "rds"]
