[package]
name = "spotify-assistant"
version = "0.1.0"
resolver = "2"
edition = "2021"

[dependencies]
rspotify = { version = "0.13.3", default-features = false, features = ["async-stream", "cli", "client-reqwest", "reqwest-default-tls", "env-file"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "default", "local-time", "chrono"] }
spotify-assistant-core = { path = "../spotify-assistant-core" }
spotify-assistant-database = { path = "../spotify-assistant-database", features = ["alldb"] }
spotify-assistant-data-request = { path = "../spotify-assistant-data-request" }
dotenv = "0.15.0"
anyhow = "1.0.93"
pbr = "1.1.1"
polars = { version = "0.45.1", optional = true }
chrono = "0.4.38"
spotify-assistant-cli = { path = "../spotify-assistant-cli" }
unicode-normalization = "0.1.24"
