[package]
name = "spotify-assistant"
version.workspace = true
edition.workspace = true
description = "Contains the spotify assistant utility's executable files"

[dependencies]
tracing.workspace = true
rspotify.workspace = true
dotenv.workspace = true
chrono.workspace = true
tokio.workspace = true
pbr.workspace = true
spotify-assistant-core.workspace = true
spotify-assistant-cli.workspace = true

spotify-assistant-database = { path = "../spotify-assistant-database", features = ["alldb"], optional = true }
once_cell = { version = "1.21.3", optional = true }
polars = { version = "0.51.0", optional = true }

[features]
default = ["spotify-assistant-database"]
data = ["polars", "once_cell", "spotify-assistant-database"]
